# Labs_OOP

./: README.md
Lab1oop/: .gitignore  CMakeLists.txt  README.txt  main.cpp
Lab1oop/include/: header.h
Lab1oop/src/: functions.cpp
Lab1oop/tests/: tests01.cpp
